api_versioned_docs/version-12.0.5/avalonia/opengl/egl/eglconsts.mdx
---
title: 'EglConsts'
hide_title: true
slug: '/avalonia/opengl/egl/eglconsts'
uid: 'Avalonia.OpenGL.Egl.EglConsts'
commentId: 'T:Avalonia.OpenGL.Egl.EglConsts'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.OpenGL'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.OpenGL.Egl'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">EglConsts Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.OpenGL.Egl</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.OpenGL</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class EglConsts
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> EglConsts
</div>
</div>

## Fields

| Name | Description |
| --- | --- |
| [EGL_ALPHA_SIZE](#uid-d8cc64d92e) | No summary available. |
| [EGL_BACK_BUFFER](#uid-9de740adb0) | No summary available. |
| [EGL_BAD_ACCESS](#uid-3264fc2a47) | No summary available. |
| [EGL_BAD_ALLOC](#uid-6e9872ff16) | No summary available. |
| [EGL_BAD_ATTRIBUTE](#uid-407c52b468) | No summary available. |
| [EGL_BAD_CONFIG](#uid-edbde1ddba) | No summary available. |
| [EGL_BAD_CONTEXT](#uid-98e54b6069) | No summary available. |
| [EGL_BAD_CURRENT_SURFACE](#uid-38f51cad65) | No summary available. |
| [EGL_BAD_DISPLAY](#uid-5f3e5267f1) | No summary available. |
| [EGL_BAD_MATCH](#uid-ab1c88629a) | No summary available. |
| [EGL_BAD_NATIVE_PIXMAP](#uid-3088d6ccd1) | No summary available. |
| [EGL_BAD_NATIVE_WINDOW](#uid-c2ee2fd3e1) | No summary available. |
| [EGL_BAD_PARAMETER](#uid-0578ff127e) | No summary available. |
| [EGL_BAD_SURFACE](#uid-c0a51364e3) | No summary available. |
| [EGL_BLUE_SIZE](#uid-9b507e1529) | No summary available. |
| [EGL_CONTEXT_LOST](#uid-ac0e47880e) | No summary available. |
| [EGL_CONTEXT_MAJOR_VERSION](#uid-e1f1b18376) | No summary available. |
| [EGL_CONTEXT_MINOR_VERSION](#uid-9110f44479) | No summary available. |
| [EGL_CORE_NATIVE_ENGINE](#uid-8acdab18db) | No summary available. |
| [EGL_D3D11_DEVICE_ANGLE](#uid-17ab3ab108) | No summary available. |
| [EGL_D3D9_DEVICE_ANGLE](#uid-a946517657) | No summary available. |
| [EGL_D3D_TEXTURE_2D_SHARE_HANDLE_ANGLE](#uid-8d5d26008e) | No summary available. |
| [EGL_D3D_TEXTURE_ANGLE](#uid-ee2aa3cba7) | No summary available. |
| [EGL_DEPTH_SIZE](#uid-d433b1dd3f) | No summary available. |
| [EGL_DEVICE_EXT](#uid-57c4cc795f) | No summary available. |
| [EGL_DRAW](#uid-d708ab09f5) | No summary available. |
| [EGL_EXTENSIONS](#uid-0008242d44) | No summary available. |
| [EGL_FALSE](#uid-161c2de8a3) | No summary available. |
| [EGL_FLEXIBLE_SURFACE_COMPATIBILITY_SUPPORTED_ANGLE](#uid-43f3537ad9) | No summary available. |
| [EGL_GREEN_SIZE](#uid-697f720e68) | No summary available. |
| [EGL_HEIGHT](#uid-0e9a024335) | No summary available. |
| [EGL_NONE](#uid-8e1e2653c1) | No summary available. |
| [EGL_NOT_INITIALIZED](#uid-8588f19dc3) | No summary available. |
| [EGL_NO_CONTEXT](#uid-b948207cf8) | No summary available. |
| [EGL_NO_DISPLAY](#uid-bd0fe37ce3) | No summary available. |
| [EGL_NO_SURFACE](#uid-cbc0aa808d) | No summary available. |
| [EGL_OPENGL_ES2_BIT](#uid-d0e0f7f911) | No summary available. |
| [EGL_OPENGL_ES3_BIT](#uid-bf5a48ebff) | No summary available. |
| [EGL_OPENGL_ES_API](#uid-a49244acba) | No summary available. |
| [EGL_OPENGL_ES_BIT](#uid-baa7bf81d7) | No summary available. |
| [EGL_PBUFFER_BIT](#uid-b3527ae1d3) | No summary available. |
| [EGL_PLATFORM_ANGLE_ANGLE](#uid-0358f76404) | No summary available. |
| [EGL_PLATFORM_ANGLE_TYPE_ANGLE](#uid-b7774eab61) | No summary available. |
| [EGL_PLATFORM_ANGLE_TYPE_D3D11_ANGLE](#uid-e8cdcfcf6b) | No summary available. |
| [EGL_PLATFORM_ANGLE_TYPE_D3D9_ANGLE](#uid-286a58dfe9) | No summary available. |
| [EGL_PLATFORM_DEVICE_EXT](#uid-14b5de0442) | No summary available. |
| [EGL_READ](#uid-e5e57ac945) | No summary available. |
| [EGL_RED_SIZE](#uid-6a6cb6ad69) | No summary available. |
| [EGL_RENDERABLE_TYPE](#uid-59fad049f3) | No summary available. |
| [EGL_SAMPLES](#uid-d5d5d0b884) | No summary available. |
| [EGL_STENCIL_SIZE](#uid-78234bac22) | No summary available. |
| [EGL_SUCCESS](#uid-d7ecc7776a) | No summary available. |
| [EGL_SURFACE_TYPE](#uid-14026a9309) | No summary available. |
| [EGL_TEXTURE_2D](#uid-2112537eb5) | No summary available. |
| [EGL_TEXTURE_FORMAT](#uid-151db41676) | No summary available. |
| [EGL_TEXTURE_INTERNAL_FORMAT_ANGLE](#uid-14dce3cd4f) | No summary available. |
| [EGL_TEXTURE_OFFSET_X_ANGLE](#uid-02982cf9b5) | No summary available. |
| [EGL_TEXTURE_OFFSET_Y_ANGLE](#uid-1d8f0243ef) | No summary available. |
| [EGL_TEXTURE_RGBA](#uid-51e944af64) | No summary available. |
| [EGL_TEXTURE_TARGET](#uid-fdd3d1dd83) | No summary available. |
| [EGL_TRUE](#uid-5260320778) | No summary available. |
| [EGL_WIDTH](#uid-e112a3aad4) | No summary available. |
| [EGL_WINDOW_BIT](#uid-88b0513c9d) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-d8cc64d92e"></span>

### EGL_ALPHA_SIZE Field

```csharp
public int EGL_ALPHA_SIZE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9de740adb0"></span>

### EGL_BACK_BUFFER Field

```csharp
public int EGL_BACK_BUFFER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3264fc2a47"></span>

### EGL_BAD_ACCESS Field

```csharp
public int EGL_BAD_ACCESS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6e9872ff16"></span>

### EGL_BAD_ALLOC Field

```csharp
public int EGL_BAD_ALLOC
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-407c52b468"></span>

### EGL_BAD_ATTRIBUTE Field

```csharp
public int EGL_BAD_ATTRIBUTE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-edbde1ddba"></span>

### EGL_BAD_CONFIG Field

```csharp
public int EGL_BAD_CONFIG
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-98e54b6069"></span>

### EGL_BAD_CONTEXT Field

```csharp
public int EGL_BAD_CONTEXT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-38f51cad65"></span>

### EGL_BAD_CURRENT_SURFACE Field

```csharp
public int EGL_BAD_CURRENT_SURFACE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5f3e5267f1"></span>

### EGL_BAD_DISPLAY Field

```csharp
public int EGL_BAD_DISPLAY
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ab1c88629a"></span>

### EGL_BAD_MATCH Field

```csharp
public int EGL_BAD_MATCH
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3088d6ccd1"></span>

### EGL_BAD_NATIVE_PIXMAP Field

```csharp
public int EGL_BAD_NATIVE_PIXMAP
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c2ee2fd3e1"></span>

### EGL_BAD_NATIVE_WINDOW Field

```csharp
public int EGL_BAD_NATIVE_WINDOW
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0578ff127e"></span>

### EGL_BAD_PARAMETER Field

```csharp
public int EGL_BAD_PARAMETER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c0a51364e3"></span>

### EGL_BAD_SURFACE Field

```csharp
public int EGL_BAD_SURFACE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9b507e1529"></span>

### EGL_BLUE_SIZE Field

```csharp
public int EGL_BLUE_SIZE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ac0e47880e"></span>

### EGL_CONTEXT_LOST Field

```csharp
public int EGL_CONTEXT_LOST
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e1f1b18376"></span>

### EGL_CONTEXT_MAJOR_VERSION Field

```csharp
public int EGL_CONTEXT_MAJOR_VERSION
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9110f44479"></span>

### EGL_CONTEXT_MINOR_VERSION Field

```csharp
public int EGL_CONTEXT_MINOR_VERSION
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8acdab18db"></span>

### EGL_CORE_NATIVE_ENGINE Field

```csharp
public int EGL_CORE_NATIVE_ENGINE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-17ab3ab108"></span>

### EGL_D3D11_DEVICE_ANGLE Field

```csharp
public int EGL_D3D11_DEVICE_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a946517657"></span>

### EGL_D3D9_DEVICE_ANGLE Field

```csharp
public int EGL_D3D9_DEVICE_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8d5d26008e"></span>

### EGL_D3D_TEXTURE_2D_SHARE_HANDLE_ANGLE Field

```csharp
public int EGL_D3D_TEXTURE_2D_SHARE_HANDLE_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ee2aa3cba7"></span>

### EGL_D3D_TEXTURE_ANGLE Field

```csharp
public int EGL_D3D_TEXTURE_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d433b1dd3f"></span>

### EGL_DEPTH_SIZE Field

```csharp
public int EGL_DEPTH_SIZE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-57c4cc795f"></span>

### EGL_DEVICE_EXT Field

```csharp
public int EGL_DEVICE_EXT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d708ab09f5"></span>

### EGL_DRAW Field

```csharp
public int EGL_DRAW
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0008242d44"></span>

### EGL_EXTENSIONS Field

```csharp
public int EGL_EXTENSIONS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-161c2de8a3"></span>

### EGL_FALSE Field

```csharp
public int EGL_FALSE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-43f3537ad9"></span>

### EGL_FLEXIBLE_SURFACE_COMPATIBILITY_SUPPORTED_ANGLE Field

```csharp
public int EGL_FLEXIBLE_SURFACE_COMPATIBILITY_SUPPORTED_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-697f720e68"></span>

### EGL_GREEN_SIZE Field

```csharp
public int EGL_GREEN_SIZE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0e9a024335"></span>

### EGL_HEIGHT Field

```csharp
public int EGL_HEIGHT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8e1e2653c1"></span>

### EGL_NONE Field

```csharp
public int EGL_NONE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8588f19dc3"></span>

### EGL_NOT_INITIALIZED Field

```csharp
public int EGL_NOT_INITIALIZED
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b948207cf8"></span>

### EGL_NO_CONTEXT Field

```csharp
public int EGL_NO_CONTEXT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bd0fe37ce3"></span>

### EGL_NO_DISPLAY Field

```csharp
public int EGL_NO_DISPLAY
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-cbc0aa808d"></span>

### EGL_NO_SURFACE Field

```csharp
public int EGL_NO_SURFACE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d0e0f7f911"></span>

### EGL_OPENGL_ES2_BIT Field

```csharp
public int EGL_OPENGL_ES2_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bf5a48ebff"></span>

### EGL_OPENGL_ES3_BIT Field

```csharp
public int EGL_OPENGL_ES3_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a49244acba"></span>

### EGL_OPENGL_ES_API Field

```csharp
public int EGL_OPENGL_ES_API
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-baa7bf81d7"></span>

### EGL_OPENGL_ES_BIT Field

```csharp
public int EGL_OPENGL_ES_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b3527ae1d3"></span>

### EGL_PBUFFER_BIT Field

```csharp
public int EGL_PBUFFER_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0358f76404"></span>

### EGL_PLATFORM_ANGLE_ANGLE Field

```csharp
public int EGL_PLATFORM_ANGLE_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b7774eab61"></span>

### EGL_PLATFORM_ANGLE_TYPE_ANGLE Field

```csharp
public int EGL_PLATFORM_ANGLE_TYPE_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e8cdcfcf6b"></span>

### EGL_PLATFORM_ANGLE_TYPE_D3D11_ANGLE Field

```csharp
public int EGL_PLATFORM_ANGLE_TYPE_D3D11_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-286a58dfe9"></span>

### EGL_PLATFORM_ANGLE_TYPE_D3D9_ANGLE Field

```csharp
public int EGL_PLATFORM_ANGLE_TYPE_D3D9_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-14b5de0442"></span>

### EGL_PLATFORM_DEVICE_EXT Field

```csharp
public int EGL_PLATFORM_DEVICE_EXT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e5e57ac945"></span>

### EGL_READ Field

```csharp
public int EGL_READ
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6a6cb6ad69"></span>

### EGL_RED_SIZE Field

```csharp
public int EGL_RED_SIZE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-59fad049f3"></span>

### EGL_RENDERABLE_TYPE Field

```csharp
public int EGL_RENDERABLE_TYPE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d5d5d0b884"></span>

### EGL_SAMPLES Field

```csharp
public int EGL_SAMPLES
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-78234bac22"></span>

### EGL_STENCIL_SIZE Field

```csharp
public int EGL_STENCIL_SIZE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d7ecc7776a"></span>

### EGL_SUCCESS Field

```csharp
public int EGL_SUCCESS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-14026a9309"></span>

### EGL_SURFACE_TYPE Field

```csharp
public int EGL_SURFACE_TYPE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2112537eb5"></span>

### EGL_TEXTURE_2D Field

```csharp
public int EGL_TEXTURE_2D
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-151db41676"></span>

### EGL_TEXTURE_FORMAT Field

```csharp
public int EGL_TEXTURE_FORMAT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-14dce3cd4f"></span>

### EGL_TEXTURE_INTERNAL_FORMAT_ANGLE Field

```csharp
public int EGL_TEXTURE_INTERNAL_FORMAT_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-02982cf9b5"></span>

### EGL_TEXTURE_OFFSET_X_ANGLE Field

```csharp
public int EGL_TEXTURE_OFFSET_X_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1d8f0243ef"></span>

### EGL_TEXTURE_OFFSET_Y_ANGLE Field

```csharp
public int EGL_TEXTURE_OFFSET_Y_ANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-51e944af64"></span>

### EGL_TEXTURE_RGBA Field

```csharp
public int EGL_TEXTURE_RGBA
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fdd3d1dd83"></span>

### EGL_TEXTURE_TARGET Field

```csharp
public int EGL_TEXTURE_TARGET
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5260320778"></span>

### EGL_TRUE Field

```csharp
public int EGL_TRUE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e112a3aad4"></span>

### EGL_WIDTH Field

```csharp
public int EGL_WIDTH
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-88b0513c9d"></span>

### EGL_WINDOW_BIT Field

```csharp
public int EGL_WINDOW_BIT
```

</section>

</ApiRefPage>

